# handshake-cpp

./: .gitignore  CMakeLists.txt  README.md  client  server
cmake/: handshake-cpp-config.cmake.in
examples/: echo_client.cpp
include/webserver/: base64.hpp  frame.hpp  http.hpp  log.hpp  server.hpp  sha1.hpp
install/include/webserver/: frame.hpp  sha1.hpp  webclient.hpp
install/lib/cmake/handshake-cpp/: handshake-cpp-config.cmake  handshake-cpp-targets-noconfig.cmake  handshake-cpp-targets.cmake
install/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
src/: client.cpp  frame.cpp  handshake.cpp  log.cpp  server.cpp  server_impl.cpp  webclient.cpp
tests/: test_base64_sha1.cpp  test_frame.cpp  test_handshake.cpp  test_oversize_payload.cpp
